New provider/bind Keenetic (alpha version). Step 2
